--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "babel-plugin-es6-promise": "^1.1.1",
     "es6-object-assign": "^1.1.0",
     "es6-promise": "^4.1.0",
+    "lodash": "^4.17.10",
     "object-keys": "^1.0.11",
-    "plotly.js":"^1.38.0",
+    "plotly.js": "^1.38.0",
     "prop-types": "^15.6.1",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
@@ -31,13 +32,12 @@
     "react-state-animation": "^0.1.0",
     "react-swiper": "^0.1.5",
     "redux": "^3.6.0",
-    "react-plotly.js":"^2.2.0",
+    "react-plotly.js": "^2.2.0",
     "redux-promise": "^0.5.3",
-    "react-grid-layout":"^0.16.6",
+    "react-grid-layout": "^0.16.6",
     "redux-thunk": "^2.1.0",
     "string-hash": "^1.1.3",
     "whatwg-fetch": "^2.0.3"
-
   },
   "devDependencies": {
     "assert": "^1.4.1",
@@ -49,6 +49,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "latest",
     "copy-webpack-plugin": "latest",
     "css-loader": "^0.25.0",
@@ -75,6 +76,7 @@
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
     "react-interval": "^1.3.3",
+    "react-modal": "^1.9.7",
     "run-sequence": "^2.2.0",
     "sass-loader": "^4.0.2",
     "should": "^13.1.3",
