--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "node-sass": "^3.10.0",
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
+    "react-image-picker": "^1.1.1",
     "react-interval": "^1.3.3",
     "react-modal": "^1.9.7",
     "run-sequence": "^2.2.0",
