--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-image-picker": "^1.1.1",
     "react-interval": "^1.3.3",
     "react-modal": "^1.9.7",
+    "react-sizeme": "^2.4.4",
     "run-sequence": "^2.2.0",
     "sass-loader": "^4.0.2",
     "should": "^13.1.3",
