--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "latest",
+    "co": "^4.6.0",
     "copy-webpack-plugin": "latest",
     "css-loader": "^0.25.0",
     "dotenv": "^4.0.0",
@@ -70,9 +71,11 @@
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^4.0.0",
     "image-webpack-loader": "^2.0.0",
+    "knex": "^0.15.0",
     "lodash": "^4.16.2",
     "mocha": "^4.0.1",
     "node-sass": "^3.10.0",
+    "pg": "^7.4.3",
     "postcss-loader": "^0.13.0",
     "react-hot-loader": "^1.3.0",
     "react-image-picker": "^1.1.1",
@@ -87,6 +90,7 @@
     "vinyl-s3": "^0.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "winston": "^3.0.0"
   }
 }
