--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.3",
     "clean-webpack-plugin": "latest",
     "co": "^4.6.0",
     "copy-webpack-plugin": "latest",
@@ -59,6 +60,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-react": "^6.10.0",
     "expect": "^21.2.1",
+    "express": "^4.16.3",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
