Added Fix for Row

--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-awesome-modal": "^2.0.1",
+    "react-basic-table": "^1.0.14",
     "react-dom": "^15.4.2",
     "react-easy-transition": "0.0.5",
     "react-flipcard": "^0.2.1",
+    "react-grid-layout": "^0.16.6",
     "react-id-swiper": "^1.5.5",
     "react-modal": "^1.7.3",
+    "react-plotly.js": "^2.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-state-animation": "^0.1.0",
     "react-swiper": "^0.1.5",
     "redux": "^3.6.0",
-    "react-plotly.js": "^2.2.0",
     "redux-promise": "^0.5.3",
-    "react-grid-layout": "^0.16.6",
     "redux-thunk": "^2.1.0",
     "string-hash": "^1.1.3",
     "whatwg-fetch": "^2.0.3"
