--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Invue",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-es6-promise": "^1.1.1",
     "es6-object-assign": "^1.1.0",
     "es6-promise": "^4.1.0",
@@ -22,6 +23,7 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-awesome-modal": "^2.0.1",
+    "react-axios": "^2.0.0",
     "react-basic-table": "^1.0.14",
     "react-dom": "^15.4.2",
     "react-easy-transition": "0.0.5",
