--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "DEVELOPMENT=true webpack-dev-server --config webpack.dev.config.js --port 8081",
     "eslint": "./node_modules/.bin/eslint -c eslintrc.json ./src/**",
-    "build": "node node_modules/.bin/webpack -d --config=webpack.prod.config.js"
+    "build": "node node_modules/.bin/webpack -d --config=webpack.prod.config.js",
+    "server":"node ./server/server.js"
+
   },
   "author": "Invue",
   "license": "ISC",
